--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,4 +3,5 @@
     <string name="title_activity_main">Inicio</string>
     <string name="title_activity_calculadora">CalculadoraActivity</string>
     <string name="title_activity_api_rest_cep">ApiRestCepActivity</string>
+    <string name="title_activity_cadastro">CadastroActivity</string>
 </resources>
